--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
 								<div class="logo">
-									<a href="index.html"><img src="img/logo_jaghana2.png" style="width:100%; height: 12vh;" alt="jaghanatour"></a>
+									<a href="index.html"><img src="img/logo_jaghana2.png" style="flex :1 1 auto; width:100%; height: 12vh;" alt="jaghanatour"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
