--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 
 <header>
 
-		<div class="header">
+	<section id="header">	
+	<div class="header">
 			<!-- Header Inner -->
 			<div class="header-inner">
 				<div class="container">
@@ -239,6 +240,7 @@
 		</div>
 		<!-- End Header Area -->
 	</header>
+</section>
 	
 	<body>
 	<!-- banner Area -->
