--- a/index.html
+++ b/index.html
@@ -85,99 +85,105 @@
 	<!-- Swiper CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-	
+
 </head>
 
 <style>
 	.swiper {
-      padding: 40px 0;
-    }
+		padding: 40px 0;
+	}
 
-    .swiper-slide {
-      display: flex;
-      justify-content: center;
-    }
+	.swiper-slide {
+		display: flex;
+		justify-content: center;
+	}
 
-	.swiper-slide .card{
-		display:flex;
+	.swiper-slide .card {
+		display: flex;
 		flex-direction: column;
 		height: 100%;
 	}
 
 	.swiper-button-prev,
-.swiper-button-next {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  background-color: #fdf8f3;
-  border: 1px solid #c2a27e;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  color: #7b5e3d;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
+	.swiper-button-next {
+		width: 48px;
+		height: 48px;
+		border-radius: 50%;
+		background-color: #fdf8f3;
+		border: 1px solid #c2a27e;
+		box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+		color: #7b5e3d;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		transition: all 0.3s ease;
+	}
 
-.swiper-button-prev::after,
-.swiper-button-next::after {
-  font-size: 18px;
-  color: #7b5e3d;
-}
+	.swiper-button-prev::after,
+	.swiper-button-next::after {
+		font-size: 18px;
+		color: #7b5e3d;
+	}
 
-.swiper-button-prev::after {
-  content: '❮'; /* Panah kiri elegan */
-}
+	.swiper-button-prev::after {
+		content: '❮';
+		/* Panah kiri elegan */
+	}
 
-.swiper-button-next::after {
-  content: '❯'; /* Panah kanan elegan */
-}
+	.swiper-button-next::after {
+		content: '❯';
+		/* Panah kanan elegan */
+	}
 
-.swiper-button-prev:hover,
-.swiper-button-next:hover {
-  background-color: #f0e6dc;
-  transform: translateY(-2px);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-}
+	.swiper-button-prev:hover,
+	.swiper-button-next:hover {
+		background-color: #f0e6dc;
+		transform: translateY(-2px);
+		box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+	}
 
 
-    .card {
-      width: 100%;
-      max-width: 300px;
-    }
+	.card {
+		width: 100%;
+		max-width: 300px;
+	}
 
-    .card-img{
-      height: 100px;
-      object-fit: cover;
-    }
+	.card-img {
+		height: 100px;
+		object-fit: cover;
+	}
 
 	.wisata .card-body {
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
-		height: 30px; /* Atur tinggi tetap */
+		height: 30px;
+		/* Atur tinggi tetap */
 	}
 
 	.card-body {
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
-		height: 75px; /* Atur tinggi tetap */
+		height: 75px;
+		/* Atur tinggi tetap */
 	}
 
 	.card-title {
 		font-size: 1.1rem;
 		font-weight: bold;
 		margin-bottom: 0.5rem;
-		height: 50px; /* Atur tinggi agar seragam */
+		height: 50px;
+		/* Atur tinggi agar seragam */
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
 </style>
 
 <body>
-	<section id="header">	
-	<div class="header">
+
+	<section id="header">
+		<div class="header">
 			<!-- Header Inner -->
 			<div class="header-inner">
 				<div class="container">
@@ -186,7 +192,8 @@
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
 								<div class="logo">
-									<a href="index.html"><img src="img/logo_jaghana2.png" style="flex :1 1 auto; width:100%; height: 12vh;" alt="jaghanatour"></a>
+									<a href="index.html"><img src="img/logo_jaghana2.png"
+											style="flex:1 1 auto; width:100%; height: 12vh;" alt="jaghanatour"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
@@ -202,10 +209,12 @@
 											<li><a href="#">Wisata<i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="bokong_semar.html">Situs Bokong Semar</a></li>
-													<li><a href="watugilang_watugateng.html">Situs Watugilang & Watugateng</a></li>
+													<li><a href="watugilang_watugateng.html">Situs Watugilang &
+															Watugateng</a></li>
 													<li><a href="hastarenggo.html">Makam Hasta Renggo</a></li>
 													<li><a href="benteng_cepuri.html">Benteng Cepuri</a></li>
-													<li><a href="masjid_gede.html">Masjid Besar Mataram Kotagede</a></li>
+													<li><a href="masjid_gede.html">Masjid Besar Mataram Kotagede</a>
+													</li>
 													<li><a href="sendang_seliran.html">Sendang Seliran</a></li>
 													<li><a href="pak_darwin.html">Pengrajin Perak Pak Darwin</a></li>
 													<li><a href="two_gates.html">Between Two Gates</a></li>
@@ -228,7 +237,8 @@
 							</div>
 							<div class="col-lg-2 col-12">
 								<div class="get-quote">
-									<a href="https://www.instagram.com/jaghana.tour?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="btn">Reservasi Tur</a>
+									<a href="https://www.instagram.com/jaghana.tour?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+										class="btn">Reservasi Tur</a>
 								</div>
 							</div>
 						</div>
@@ -238,8 +248,9 @@
 			<!--/ End Header Inner -->
 		</div>
 		<!-- End Header Area -->
-</section>
-	
+
+	</section>
+
 
 	<!-- banner Area -->
 	<section class="banner">
@@ -261,27 +272,32 @@
 					</div>
 				</div>
 			</div>
-	<!-- End Single banner -->
-</div>
-</section>
-<!-- End banner Area -->
+			<!-- End Single banner -->
+		</div>
+	</section>
+	<!-- End banner Area -->
 
-	<!-- Start intro Area -->
-	<section class="intro">
+	<!-- Start schedule Area -->
+	<section class="schedule">
 		<div class="container">
-			<div class="intro-inner">
+			<div class="schedule-inner">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12 ">
-						<!-- single-intro -->
-						<div class="single-intro first">
+						<!-- single-schedule -->
+						<div class="single-schedule first">
 							<div class="inner">
 								<div class="icon">
 									<i class="fa fa-ambulance"></i>
 								</div>
 								<div class="single-content">
 									<h4>Tahukah Kamu?</h4>
-									<p>Kotagede, yang terletak di Yogyakarta, adalah bekas ibu kota Kerajaan Mataram Islam pada abad ke-16. Kotagede merupakan daerah budaya dengan banyak peninggalan sejarah yang dapat dilihat dari arsitektur bangunan maupun kehidupan sosial budaya.</p>
-									<p>Selain itu, Kotagede juga terkenal sebagai pusat kerajinan perak. Para wisatawan dapat berkunjung dan melihat secara langsung proses pengolahan perak di sejumlah bengkel yang ada di Kotagede.</p>
+									<p>Kotagede, yang terletak di Yogyakarta, adalah bekas ibu kota Kerajaan Mataram
+										Islam pada abad ke-16. Kotagede merupakan daerah budaya dengan banyak
+										peninggalan sejarah yang dapat dilihat dari arsitektur bangunan maupun kehidupan
+										sosial budaya.</p>
+									<p>Selain itu, Kotagede juga terkenal sebagai pusat kerajinan perak. Para wisatawan
+										dapat berkunjung dan melihat secara langsung proses pengolahan perak di sejumlah
+										bengkel yang ada di Kotagede.</p>
 								</div>
 							</div>
 						</div>
@@ -293,10 +309,10 @@
 			<div class="section-title">
 				<h2 class="elegant-title">PLACES TO GO</h2>
 				<p>Beberapa rekomendasi destinasi wisata di Kotagede</p>
-			</div>			 
-			<div class="elegant-underline"></div> 
+			</div>
+			<div class="elegant-underline"></div>
 		</div>
-		
+
 		<!--Swiper-->
 		<div class="swiper">
 			<div class="swiper-wrapper">
@@ -304,10 +320,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="bokong_semar.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_1173.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Situs Bokong Semar</h5>
-						</div>
+							<img src="img/IMG_1173.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Situs Bokong Semar</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -315,11 +331,12 @@
 				<!--Slide-->
 				<div class="swiper-slide">
 					<div class="card">
-						<a href="watugilang_watugateng.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_1170.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Situs Watugilang & Watugateng</h5>
-						</div>
+						<a href="watugilang_watugateng.html" class="card"
+							style="text-decoration: none; color: inherit;">
+							<img src="img/IMG_1170.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Situs Watugilang & Watugateng</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -328,10 +345,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="hastarenggo.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_1990.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Makam Hastarenggo</h5>
-						</div>
+							<img src="img/IMG_1990.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Makam Hastarenggo</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -340,10 +357,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="benteng_cepuri.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_1180.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Benteng Cepuri</h5>
-						</div>
+							<img src="img/IMG_1180.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Benteng Cepuri</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -352,10 +369,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="masjid_gede.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_2011.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Masjid Besar Mataram Kotagede</h5>
-						</div>
+							<img src="img/IMG_2011.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Masjid Besar Mataram Kotagede</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -364,10 +381,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="sendang_seliran.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_1216.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Sendang Seliran</h5>
-						</div>
+							<img src="img/IMG_1216.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Sendang Seliran</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -376,10 +393,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="pak_darwin.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_1199.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Pengrajin Perak Pak Darwin</h5>
-						</div>
+							<img src="img/IMG_1199.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Pengrajin Perak Pak Darwin</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -388,10 +405,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="two_gates.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_2016.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Between Two Gates</h5>
-						</div>
+							<img src="img/IMG_2016.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Between Two Gates</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -400,10 +417,10 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="longkang_cafe.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/IMG_2033.jpg" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Longkang Cafe</h5>
-						</div>
+							<img src="img/IMG_2033.jpg" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Longkang Cafe</h5>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -418,11 +435,11 @@
 
 	<section class="rute">
 		<div class="container">
-					<div class="section-title">
-						<h2 class="elegant-title">Take a Look at Our Tours</h2>
-						<p>Rekomendasi rute wisata yang bisa disesuaikan dengan keinginan kamu!</p>
-					</div>
-					<div class="elegant-underline"></div>
+			<div class="section-title">
+				<h2 class="elegant-title">Take a Look at Our Tours</h2>
+				<p>Rekomendasi rute wisata yang bisa disesuaikan dengan keinginan kamu!</p>
+			</div>
+			<div class="elegant-underline"></div>
 		</div>
 		<!--Swiper-->
 		<div class="swiper">
@@ -432,11 +449,11 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="rute_rasa.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/RASA.png" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Rute RASA</h5>
-							<p class="card-text">Cocok untuk kamu yang punya jiwa muda dan berpetualang</p>
-						</div>
+							<img src="img/RASA.png" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Rute RASA</h5>
+								<p class="card-text">Cocok untuk kamu yang punya jiwa muda dan berpetualang</p>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -445,11 +462,11 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="rute_sikil.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/SIKIL.png" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Rute SIKIL</h5>
-							<p class="card-text">Cocok untuk anak-anak yang pengen belajar sejarah di Kotagede</p>
-						</div>
+							<img src="img/SIKIL.png" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Rute SIKIL</h5>
+								<p class="card-text">Cocok untuk anak-anak yang pengen belajar sejarah di Kotagede</p>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -458,11 +475,11 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="rute_laras.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/LARAS.png" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Rute LARAS</h5>
-							<p class="card-text">Cocok untuk lansia yang ingin menikmati Kotagede dengan santai</p>
-						</div>
+							<img src="img/LARAS.png" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Rute LARAS</h5>
+								<p class="card-text">Cocok untuk lansia yang ingin menikmati Kotagede dengan santai</p>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -471,59 +488,61 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<a href="rute_ramah.html" class="card" style="text-decoration: none; color: inherit;">
-						<img src="img/RAMAH.png" class="card-img-top">
-						<div class="card-body">
-							<h5 class="card-title">Rute RAMAH</h5>
-							<p class="card-text">Keliling Kotagede dengan akses yang mudah bagi pengguna kursi roda</p>
-						</div>
+							<img src="img/RAMAH.png" class="card-img-top">
+							<div class="card-body">
+								<h5 class="card-title">Rute RAMAH</h5>
+								<p class="card-text">Keliling Kotagede dengan akses yang mudah bagi pengguna kursi roda
+								</p>
+							</div>
 						</a>
 					</div>
 				</div>
 			</div>
-			
+
 			<!--Navigasi Panah-->
 			<div class="swiper-button-prev"></div>
 			<div class="swiper-button-next"></div>
 		</div>
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+		<!-- Swiper JS -->
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-<script>
-  const swiper = new Swiper('.swiper', {
-	slidesPerView: 1,
-	spaceBetween: 20,
-	navigation: {
-	  nextEl: '.swiper-button-next',
-	  prevEl: '.swiper-button-prev',
-	},
-	breakpoints: {
-	  768: {
-		slidesPerView: 2,
-	  },
-	  992: {
-		slidesPerView: 4,
-	  }
-	}
-  });
-  </script>
+		<script>
+			const swiper = new Swiper('.swiper', {
+				slidesPerView: 1,
+				spaceBetween: 20,
+				navigation: {
+					nextEl: '.swiper-button-next',
+					prevEl: '.swiper-button-prev',
+				},
+				breakpoints: {
+					768: {
+						slidesPerView: 2,
+					},
+					992: {
+						slidesPerView: 4,
+					}
+				}
+			});
+		</script>
 
-	<!-- Footer Area -->
-	<footer id="footer" class="footer ">
-		<!-- Copyright -->
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-12">
-						<div class="copyright-content">
-							<p>© Copyright 2025 | All Rights Reserved by Teknik Geomatika UPN "Veteran" Yogyakarta</a> </p>
+		<!-- Footer Area -->
+		<footer id="footer" class="footer ">
+			<!-- Copyright -->
+			<div class="copyright">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-12">
+							<div class="copyright-content">
+								<p>© Copyright 2025 | All Rights Reserved by Teknik Geomatika UPN "Veteran"
+									Yogyakarta</a> </p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<!--/ End Copyright -->
-	</footer>
-	<!--/ End Footer Area -->
+			<!--/ End Copyright -->
+		</footer>
+		<!--/ End Footer Area -->
 
 </body>
 
