--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								<!-- Start Logo -->
 								<div class="logo">
 									<a href="index.html"><img src="img/logo_jaghana2.png"
-											style="flex:1 1 auto; width:100%; height: 70px;" alt="jaghanatour"></a>
+											style="flex:1 1 auto; width:auto; height: 70px;" alt="jaghanatour"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
