--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MUBENG KOTAGEDE</title>
 
 	<!-- Google Fonts -->
@@ -193,7 +193,7 @@
 								<!-- Start Logo -->
 								<div class="logo">
 									<a href="index.html"><img src="img/logo_jaghana2.png"
-											style="flex:1 1 auto; width:100%; height: 70px; object-fit:contain;" alt="jaghanatour"></a>
+											style="flex:1 1 auto; width:auto; height: 70px; object-fit:contain;" alt="jaghanatour"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
