--- a/index.html
+++ b/index.html
@@ -178,11 +178,6 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
-
-	.logo {
-  text-align: left !important;
-}
-
 </style>
 
 <body>
@@ -196,9 +191,9 @@
 						<div class="row">
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
-								<div class="logo text-start" style="display:flex;align-items: center; justify-content: flex-start;">
+								<div class="logo">
 									<a href="index.html"><img src="img/logo_jaghana2.png"
-											style="flex:1 1 auto; width:100%; height: 70px; object-fit:contain;" alt="jaghanatour"></a>
+											style="flex:1 1 auto; width:auto; height: 70px; object-fit:contain;" alt="jaghanatour"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
