--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 					</div>
 	</section>
 
-	<section class="wisata">
+	<section id="wisata" class="wisata">
 		<div class="container">
 			<div class="section-title">
 				<h2 class="elegant-title">Tempat Untuk Dikunjungi</h2>
