--- a/rute_ramah.html
+++ b/rute_ramah.html
@@ -146,7 +146,7 @@
 			<div class="bread-inner">
 				<div class="row">
 					<div class="col-12">
-						<h2>RUTE RASA</h2>
+						<h2>RUTE RAMAH</h2>
 						<ul class="bread-list">
 							<li><a href="index.html">Home</a></li>
 							<li><i class="icofont-simple-right"></i></li>
