--- a/rute_A.html
+++ b/rute_A.html
@@ -119,7 +119,7 @@
     //GEOJSON
     var rute_A = L.geoJSON(rute_A, {
         style: {
-            color: 'red',
+            color: '#914704',
             weight: 4,
             opacity: 0.8
         },
