--- a/rute_ceria.html
+++ b/rute_ceria.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Title -->
-	<title>RUTE SIKIL</title>
+	<title>RUTE CERIA</title>
 
 	<!-- Favicon -->
 	<link rel="icon" href="img/favicon.png">
@@ -116,7 +116,7 @@
 										<li><a href="#">Rute Wisata<i class="icofont-rounded-down"></i></a>
 											<ul class="dropdown">
 												<li><a href="rute_rasa.html">Rute RASA</a></li>
-												<li><a href="rute_sikil.html">Rute SIKIL</a></li>
+												<li><a href="rute_ceria.html">Rute CERIA</a></li>
 												<li><a href="rute_laras.html">Rute LARAS</a></li>
 												<li><a href="rute_ramah.html">Rute RAMAH</a></li>
 											</ul>
@@ -146,11 +146,11 @@
 			<div class="bread-inner">
 				<div class="row">
 					<div class="col-12">
-						<h2>RUTE SIKIL</h2>
+						<h2>RUTE CERIA</h2>
 						<ul class="bread-list">
 							<li><a href="index.html">Home</a></li>
 							<li><i class="icofont-simple-right"></i></li>
-							<li class="active">Rute SIKIL</li>
+							<li class="active">Rute CERIA</li>
 						</ul>
 					</div>
 				</div>
@@ -165,8 +165,8 @@
 					<div class="row">
 						<div class="col-12">
 							<!-- News Title -->
-							<h1 style="color:#974824; font-size: 30px; font-weight: bold; font-family: 'Times New Roman', Times, serif;text-align: center;">RUTE SIKIL</h1>
-							<h1 style="color:#974824; font-size: 20px; font-weight: bold; font-family: 'Times New Roman', Times, serif;text-align: center;">(Si Kecil Keliling Kotagede)</h1>
+							<h1 style="color:#974824; font-size: 30px; font-weight: bold; font-family: 'Times New Roman', Times, serif;text-align: center;">RUTE CERIA</h1>
+							<h1 style="color:#974824; font-size: 20px; font-weight: bold; font-family: 'Times New Roman', Times, serif;text-align: center;">(Cerita Riang Anak di Kotagede)</h1>
 							<div class="single-main">
 								<iframe src="rute_B.html" width="100%" height="400" style="border:none;padding: 15px;"></iframe>
 
