--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 											<li><a href="#">Rute Wisata<i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="rute_rasa.html">Rute RASA</a></li>
-													<li><a href="rute_sikil.html">Rute SIKIL</a></li>
+													<li><a href="rute_ceria.html">Rute CERIA</a></li>
 													<li><a href="rute_laras.html">Rute LARAS</a></li>
 													<li><a href="rute_ramah.html">Rute RAMAH</a></li>
 												</ul>
@@ -461,10 +461,10 @@
 				<!--Slide-->
 				<div class="swiper-slide">
 					<div class="card">
-						<a href="rute_sikil.html" class="card" style="text-decoration: none; color: inherit;">
-							<img src="img/SIKIL.png" class="card-img-top">
+						<a href="rute_ceria.html" class="card" style="text-decoration: none; color: inherit;">
+							<img src="img/CERIA.png" class="card-img-top">
 							<div class="card-body">
-								<h5 class="card-title">Rute SIKIL</h5>
+								<h5 class="card-title">Rute CERIA</h5>
 								<p class="card-text">Cocok untuk anak-anak yang pengen belajar sejarah di Kotagede</p>
 							</div>
 						</a>
