--- a/pak_darwin.html
+++ b/pak_darwin.html
@@ -105,7 +105,7 @@
 										<li><a href="#">Rute Wisata<i class="icofont-rounded-down"></i></a>
 											<ul class="dropdown">
 												<li><a href="rute_rasa.html">Rute RASA</a></li>
-												<li><a href="rute_sikil.html">Rute SIKIL</a></li>
+												<li><a href="rute_ceria.html">Rute CERIA</a></li>
 												<li><a href="rute_laras.html">Rute LARAS</a></li>
 												<li><a href="rute_ramah.html">Rute RAMAH</a></li>
 											</ul>
