--- a/watugilang_watugateng.html
+++ b/watugilang_watugateng.html
@@ -104,10 +104,10 @@
 										</li>
 										<li><a href="#">Rute Wisata<i class="icofont-rounded-down"></i></a>
 											<ul class="dropdown">
-												<li><a href="blog-single.html">Rute RASA</a></li>
-												<li><a href="blog-single.html">Rute SIKIL</a></li>
-												<li><a href="blog-single.html">Rute LARAS</a></li>
-												<li><a href="blog-single.html">Rute RAMAH</a></li>
+												<li><a href="rute_rasa.html">Rute RASA</a></li>
+												<li><a href="rute_ceria.html">Rute CERIA</a></li>
+												<li><a href="rute_laras.html">Rute LARAS</a></li>
+												<li><a href="rute_ramah.html">Rute RAMAH</a></li>
 											</ul>
 										</li>
 										<li><a href="https://linktr.ee/jaghanatour">Kontak</a></li>
