--- a/rute_B.html
+++ b/rute_B.html
@@ -41,7 +41,7 @@
 
 <body>
     <a href="rute_B.html" target="_blank" id="fullmap-btn">Buka Peta</a>
-    <a href="rute_sikil.html" id="back-btn">Kembali ke Beranda</a>
+    <a href="rute_ceria.html" id="back-btn">Kembali ke Beranda</a>
 
     <div id="map"></div>
     <div id="mapButtons" style="
