--- a/rute_B.html
+++ b/rute_B.html
@@ -119,7 +119,7 @@
     //GEOJSON
     var rute_B = L.geoJSON(rute_B, {
         style: {
-            color: 'red',
+            color: '#914704',
             weight: 4,
             opacity: 0.8
         },
