--- a/rute_C.html
+++ b/rute_C.html
@@ -119,7 +119,7 @@
     //GEOJSON
     var rute_C = L.geoJSON(Rute_C, {
         style: {
-            color: 'red',
+            color: '#914704',
             weight: 4,
             opacity: 0.8
         },
