--- a/rute_D.html
+++ b/rute_D.html
@@ -119,7 +119,7 @@
     //GEOJSON
     var rute_D = L.geoJSON(rute_D, {
         style: {
-            color: 'red',
+            color: '#914704',
             weight: 4,
             opacity: 0.8
         },
